# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  book-abstract.md  configuration.yml  spec.yaml
.cargo/: config.toml
.github/: general.yml
.github/workflows/: general.yml
.sqlx/: query-cdbedf738f4f2421922d3492d72fe4a93402723a8e2abc3f10e2c09c9bfa84d9.json
configuration/: base.yaml  production.yaml
migrations/: 20220408045004_create_subscriptions_table.sql  20220415050715_add_status_to_subscriptions.sql  20220415052846_make_status_not_null_in_subscriptions.sql  20220415054049_create_subscriptions_tokens_table.sql  20220421064742_rename_password_column.sql  20220421092303_add_salt_to_users.sql  20220423080859_seed_user.sql  20220426015449_create_idempotency_table.sql  20220426053912_relax_null_checks_on_idempotency.sql  20220427043813_create_newsletter_issues_table.sql  20220427044651_create_issue_delivery_queue_table.sql  20230901063153_create_subscriptions_table.sql  20230909052531_add_status_to_subscriptions.sql  20230909054851_make_status_not_null_in_subscriptions.sql  20230909060038_create_subscription_tokens_table.sql  20230913234547_create_users_table.sql  20230914053944_rename_password_column.sql  20230914070403_add_salt_to_users.sql  20230914081646_remove_salt_from_users.sql  20230919043720_seed_user.sql  20230921095429_create_idempotency_table.sql  20230922050900_relax_null_checks_on_idempotency.sql  20230923075730_create_newsletter_issues_table.sql  20230925014959_create_issue_delivery_queue_table.sql
scripts/: delete_all_subscriptions.sh  drop_test_databases.sh  init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
