[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
anyhow = "1.0"
argon2 = { version = "0.3", features = ["std"] }
base64 = "0.13"
chrono = "0.4"
claim = "0.5"
config = "0.11"
htmlescape = "0.3"
once_cell = "1.10"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies"
] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.5"
unicode-segmentation = "1.9"
uuid = { version = "0.8", features = ["v4", "serde"] }
urlencoding = "2.1"
validator = "0.14"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
fake = "~2.3"
linkify = "0.8"
serde_json = "1.0"
tokio = { version = "1.17", features = ["rt", "macros"] }
quickcheck = "0.9"
quickcheck_macros = "0.9"
wiremock = "0.5"
